--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -2,4 +2,7 @@
     text-align: center; /* Alinha o texto dos filhos do elemento*/
     color: black; /* Define a cor dos filhos do elemento*/
   }
+  h1 {
+    color: $cor-primaria; /* Define a cor do texto */
+  }
   
